<resources>
    <string name="app_name">Countries</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_success">Success</string>
    <string name="text_ok">Ok</string>
    <string name="text_error">Error</string>
    <string name="filter">Filter</string>
    <string name="sort">sort</string>
    <string name="sort_options">Sort options</string>
    <string name="name_or_area">Sort by name or area size</string>
    <string name="name">Name</string>
    <string name="ascending_or_descending_order">Ascending or descending order</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
</resources>
