<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="22sp"
            android:textColor="#000"
            android:text="@string/sort_options" />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/sort_group">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/name_or_area" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sort_name"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sort_area"
                android:text="Area size"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp" />

    </RadioGroup>


    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/order_group">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/ascending_or_descending_order" />


        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_asc"
                android:text="@string/asc"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_desc"
                android:text="@string/desc"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp" />

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="30dp">

        <TextView
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="30dp" />

        <TextView
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textSize="16sp"
                android:textColor="@color/tealDark" />

    </LinearLayout>



</LinearLayout>